Update allowed methods in SecurityConfig and add form submission functionality in ChatInputComponent